--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prisma": "^5.8.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.0"
+    "react-icons": "^5.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
