--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.5.1",
     "delay": "^6.0.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "prisma": "^5.8.0",
     "react": "^18",
     "react-dom": "^18",
