--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.8.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
+    "@tanstack/react-query": "^5.17.12",
     "axios": "^1.6.5",
     "classnames": "^2.5.1",
     "delay": "^6.0.0",
