--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@prisma/client": "^5.9.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
+    "@react-email/components": "^0.0.14",
+    "@react-email/render": "^0.0.12",
     "@sentry/nextjs": "^7.93.0",
     "@tanstack/react-query": "^5.17.12",
     "axios": "^1.6.5",
+    "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
     "delay": "^6.0.0",
     "next": "14.0.4",
@@ -36,6 +39,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
