--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@radix-ui/themes": "^2.0.3",
     "@react-email/components": "^0.0.14",
     "@react-email/render": "^0.0.12",
-    "@sentry/nextjs": "^7.93.0",
     "@tanstack/react-query": "^5.17.12",
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
+    "date-fns": "^3.3.1",
     "delay": "^6.0.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
@@ -35,7 +35,8 @@
     "react-markdown": "^9.0.1",
     "react-simplemde-editor": "^5.2.0",
     "recharts": "^2.10.4",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
