--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.9.1",
@@ -22,6 +25,7 @@
     "classnames": "^2.5.1",
     "date-fns": "^3.3.1",
     "delay": "^6.0.0",
+    "framer-motion": "^11.0.3",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.9",
