--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.9",
+    "postcss-import": "^16.0.0",
     "prisma": "^5.8.0",
     "react": "^18",
     "react-dom": "^18",
