--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email": "email dev"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
@@ -17,7 +18,7 @@
     "@prisma/client": "^5.9.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
-    "@react-email/components": "^0.0.14",
+    "@react-email/components": "0.0.14",
     "@react-email/render": "^0.0.12",
     "@tanstack/react-query": "^5.17.12",
     "axios": "^1.6.5",
@@ -33,6 +34,7 @@
     "prisma": "^5.8.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "2.0.0",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.0",
